--- a/emails/templates/emails/create_school_form.html
+++ b/emails/templates/emails/create_school_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% blocktrans trimmed with user=user %}
-{{ user }}, Вы получили это письмо, так как вы зарегистрировались студентом
+{{ user.first_name }} {{ user.last_name }}, Вы получили это письмо, так как вы зарегистрировались студентом
 в школе неНумерологии Ольги Перцевой.
 {% endblocktrans %}
 <br>
@@ -15,6 +15,6 @@
 {% endblocktrans %}
 <br>
 <br>
-<a href="">{% trans "Проверить оплату или оплатить" %}</a>
+<a href="{% url %}">{% trans "Проверить оплату или оплатить" %}</a>
 <br>
 {% endblock content %}
