--- a/emails/templates/emails/create_school_form.html
+++ b/emails/templates/emails/create_school_form.html
@@ -15,6 +15,6 @@
 {% endblocktrans %}
 <br>
 <br>
-<a href="{% url %}">{% trans "Проверить оплату или оплатить" %}</a>
+<a href="{{ url_pay }}">{% trans "Проверить оплату или оплатить" %}</a>
 <br>
 {% endblock content %}
