fix grammar errors

--- a/emails/templates/emails/notify_pay_mail.html
+++ b/emails/templates/emails/notify_pay_mail.html
@@ -5,8 +5,8 @@
 {% block content %}
 {% blocktrans trimmed with user=user %}
 {{ user_name }}, Вы получили это письмо, так как Вы зачислены на {{ flow_num }} поток
-обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой. На данный моменту
-Вы внесли предоплату в {{ amount }} рублей. Стоимость обучения составляет {{ price}} рублей.
+обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой. На данный момент
+Вы внесли оплату в размере {{ amount }} рублей. Стоимость обучения составляет {{ price}} рублей.
 Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут .
 {% endblocktrans %}
 <br>
@@ -23,7 +23,7 @@
 <br>
 {% blocktrans trimmed %}
 Если у Вас остались вопросы, технические сложности с оплатой или у Вас не получается
-принять участие в этом потоке обучения, свяжитесь с нашим админстратором.
+принять участие в этом потоке обучения, свяжитесь с нашим администратором.
 Для связи вы можете использовать мессанджеры WhatsApp, Viber, Telegram.
 <a href="tel:+79682432507"> +79682432507</ a>
 {% endblocktrans %}
