--- a/emails/templates/emails/notify_payment_accepted_mail.html
+++ b/emails/templates/emails/notify_payment_accepted_mail.html
@@ -6,7 +6,7 @@
 {% blocktrans trimmed with user=user %}
 {{ user_name }}, для  оплаты Вашего обучения на {{ flow_num }} потоке
 обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой поступил платеж на сумму
-{{ amount // 100}} рублей. 
+{{ amount }} рублей. 
 {% endblocktrans %}
 {% if price == total_amount %}
 Вы полностью оплатили обучение. Благодарим Вас за полную оплату обучения.
