--- a/emails/templates/emails/notify_payment_accepted_mail.html
+++ b/emails/templates/emails/notify_payment_accepted_mail.html
@@ -14,7 +14,7 @@
 Вы оплатили {{ total_amount }} руб. 
 Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут  и полная
 стоимость обучения составляет {{ price }} руб.
-{$ endif %}
+{% endif %}
 <br>
 <br>
 {% blocktrans trimmed %}
