--- a/emails/templates/emails/notify_payment_accepted_mail.html
+++ b/emails/templates/emails/notify_payment_accepted_mail.html
@@ -11,7 +11,7 @@
 {% if price == total_amount %}
 Вы полностью оплатили обучение. Благодарим Вас за полную оплату обучения.
 {% else %}
-Вы оплатили {{ total_amount }} руб. 
+На текущий момент Вы оплатили {{ total_amount }} руб. 
 Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут  и полная
 стоимость обучения составляет {{ price }} руб.
 {% endif %}
