--- a/emails/templates/emails/notify_payment_refunded_mail.html
+++ b/emails/templates/emails/notify_payment_refunded_mail.html
@@ -12,7 +12,7 @@
 На текущий момент Вы оплатили {{ total_amount }} руб. 
 Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут  и полная
 стоимость обучения составляет {{ price }} руб.
-{% endif %}
+{% endblocktrans %}
 <br>
 <br>
 {% blocktrans trimmed %}
