--- a/emails/templates/emails/notify_payment_accepted_mail.html
+++ b/emails/templates/emails/notify_payment_accepted_mail.html
@@ -6,14 +6,14 @@
 {% blocktrans trimmed with user=user %}
 {{ user_name }}, для  оплаты Вашего обучения на {{ flow_num }} потоке
 обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой поступил платеж на сумму
-{{ amount }} рублей. 
+{{ amount }} рублей. <br>
 {% endblocktrans %}
 {% if price == total_amount %}
 Вы полностью оплатили обучение. Благодарим Вас за полную оплату обучения.
 {% else %}
-На текущий момент Вы оплатили {{ total_amount }} руб. 
-Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут  и полная
-стоимость обучения составляет {{ price }} руб.
+На текущий момент Вы оплатили {{ total_amount }} руб.<br> 
+Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут.<br>
+Полная стоимость обучения составляет {{ price }} руб.
 {% endif %}
 <br>
 <br>
