--- a/emails/templates/emails/notify_payment_refunded_mail.html
+++ b/emails/templates/emails/notify_payment_refunded_mail.html
@@ -8,10 +8,11 @@
 {{ user_name }}, с суммы оплаты Вашего обучения на {{ flow_num }} потоке
 обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой был осуществлен возврат на сумму
 {{ amount }} рублей. 
-
+<br>
 На текущий момент Вы оплатили {{ total_amount }} руб. 
-Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут  и полная
-стоимость обучения составляет {{ price }} руб.
+<br>
+Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут.<br>
+Полная стоимость обучения составляет {{ price }} руб.
 {% endblocktrans %}
 <br>
 <br>
