added email validation subroutine

--- a/emails/templates/emails/validate_email_form.html
+++ b/emails/templates/emails/validate_email_form.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 {% blocktrans trimmed with user=user %}
-Код подтверждения адреса электронной почты {{ code }}
-Укажите этот код в странице заполнения анкеты студента школы неНумрологии Ольги Перцевой
+Ваш Код подтверждения адреса электронной почты {{ code }}
+Укажите этот код в странице заполнения анкеты
 {% endblocktrans %}
 <br>
 <br>
