--- a/emails/templates/emails/new_user_email_passwd.html
+++ b/emails/templates/emails/new_user_email_passwd.html
@@ -1,4 +1,4 @@
-{% extends "emails/base.txt" %}
+{% extends "emails/base.html" %}
 {% load i18n %}
 
 
@@ -6,10 +6,10 @@
 {% blocktrans trimmed with user=user %}
 На нашем ресурсе, для Вас создана учетная запись.
 Для входа вы можете использовать следующие параметры:
-Логин: {{ user.email}}
+Логин: {{ email}}
 Пароль: {{ passwd }}
 Вы можете сменить пароль используя систему сброса пароля, либо в разделе профиль личного кабинета
-
 {% endblocktrans %}
-
+<br>
+<br>
 {% endblock content %}
