fixed urls for frontend; added facebook pixel code for main page

--- a/schoolpub/templates/index1.html
+++ b/schoolpub/templates/index1.html
@@ -22,6 +22,23 @@
         webvisor:true
    });
 </script>
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1313146512379107');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 <noscript><div><img src="https://mc.yandex.ru/watch/64751164" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </head>
 <body>
@@ -78,7 +95,7 @@
       </div>
       <div class="price-ob intro__price">
         <div class="color--accent price-stage">49000 руб.</div>
-        <a href="/school/apply/?flow=16-1-и-2" class="btn intro__btn">Зарегистрироваться</a>
+        <a href="/schoolp/apply/?flow=16-1-и-2" class="btn intro__btn">Зарегистрироваться</a>
       </div>
     </div>
   </section>
@@ -251,7 +268,7 @@
         </div>
         <div class="price-ob process__price">
           <div class="color--accent price-stage">49000 руб.</div>
-          <a href="/school/apply/?flow=16-1-и-2"" class="btn">Зарегистрироваться</a> 
+          <a href="/schoolp/apply/?flow=16-1-и-2"" class="btn">Зарегистрироваться</a> 
         </div>
         <img src="/static/images/process-author.png" alt="Ольга Перцева" class="process__author">
       </div>
@@ -368,7 +385,7 @@
         </div>
         <div class="price-ob step__price">
           <div class="color--accent price-stage">39000 руб.</div>
-          <a href="/school/apply/?flow=16-ступень-1" class="btn steps__btn">Зарегистрироваться</a>
+          <a href="/schoolp/apply/?flow=16-ступень-1" class="btn steps__btn">Зарегистрироваться</a>
         </div>
       </div>
     </section>
@@ -482,7 +499,7 @@
         </div>
         <div class="price-ob step__price">
           <div class="color--accent price-stage">15000 руб.</div>
-          <a href="/school/apply/?flow=15-ступень-2" class="btn steps__btn">Зарегистрироваться</a>
+          <a href="/schoolp/apply/?flow=15-ступень-2" class="btn steps__btn">Зарегистрироваться</a>
         </div>
       </div>
     </section>
@@ -580,7 +597,7 @@
     <div class="container section__container">
       <div class="appeal__inner">
         <h2 class="section-title appeal__title">Не хватает только <span class="color--accent">вас!</span></h2>
-        <a href="/school/apply/"" class="btn appeal__btn">Зарегистрироваться</a>
+        <a href="/schoolp/apply/"" class="btn appeal__btn">Зарегистрироваться</a>
       </div>
     </div>
   </section>
