changed emails templates

--- a/emails/templates/emails/create_school_form.html
+++ b/emails/templates/emails/create_school_form.html
@@ -4,14 +4,12 @@
 
 {% block content %}
 {% blocktrans trimmed with user=user %}
-{{ user_name }}, Вы получили это письмо, так как вы зарегистрировались студентом
-в школе неНумерологии Ольги Перцевой.
+{{ user_name }}, , этим письмом мы подтверждаем Вашу регистрацию как студента в школе неНумерологии Ольги Перцевой.
 {% endblocktrans %}
 <br>
 <br>
 {% blocktrans trimmed %}
-Для оплаты обучения, проверки статуса оплаты, либо внесения оплаты, вы можете
-перейти по следующей ссылке:
+Чтобы оплатить обучение или проверить статус оплаты, перейдите по следующей ссылке:
 {% endblocktrans %}
 <br>
 <br>
