--- a/emails/templates/emails/notify_payment_all_mail.html
+++ b/emails/templates/emails/notify_payment_all_mail.html
@@ -2,20 +2,20 @@
 {% load i18n %}
 
 
+
 {% block content %}
 {% blocktrans trimmed with user=user %}
-{{ user_name }}, Вы полностью оплатили обучение на {{ flow_num }} потоке
-обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой.
+{{ user_name }}, подтверждаем полную оплату обучения на {{ flow_num }} потоке школы неНумерологии Ольги Перцевой {{ flow_name }}.
  <br>
 {% endblocktrans %}
 
-Благодарим Вас за полную оплату обучения.
+Благодарим Вас!
 <br>
 
 {% blocktrans trimmed %}
-Если у Вас остались вопросы, технические сложности с оплатой или у Вас не получается
-принять участие в этом потоке обучения, свяжитесь с нашим администратором.
-Для связи вы можете использовать мессанджеры WhatsApp, Viber, Telegram.
+Если у Вас остались вопросы, есть сложности с оплатой или не получается
+принять участие в этом потоке обучения, свяжитесь с нашим администратором в WhatsApp, Viber или Telegram.
+
 <a href="tel:+79687432507">+79687432507</a>
 {% endblocktrans %}
 
