--- a/emails/templates/emails/notify_order_payment_accepted_mail.html
+++ b/emails/templates/emails/notify_order_payment_accepted_mail.html
@@ -2,17 +2,18 @@
 {% load i18n %}
 
 
+
 {% block content %}
 {% blocktrans trimmed with user=user %}
-{{ user_name }}, для  оплаты Вашего заказа услуги {{ order_num }}  на сайте Ольги Перцевой поступил платеж на сумму
-{{ amount }} рублей. <br>
+{{ user_name }}, подтверждаем получение платежа в размере {{ amount }} рублей для оплаты заказа {{ order_num }} на сайте Ольги Перцевой. <br>
 {% endblocktrans %}
 {% if price == total_amount %}
-Вы полностью оплатили заказ. Благодарим Вас за полную оплату.
+Заказ оплачен полностью. Мы благодарим Вас!
 {% else %}
-На текущий момент Вы оплатили {{ total_amount }} руб.<br> 
-Полная стоимость услуги составляет {{ price }} руб.
+Оплачено {{ total_amount }} руб.<br>
+Полная стоимость услуги {{ price }} руб.
 {% endif %}
+
 <br>
 
 {% endblock content %}
