--- a/emails/templates/emails/notify_order_payment_refunded_mail.html
+++ b/emails/templates/emails/notify_order_payment_refunded_mail.html
@@ -2,34 +2,15 @@
 {% load i18n %}
 
 
+
 {% block content %}
 {% blocktrans trimmed with user=user %}
 
-{{ user_name }}, с суммы оплаты Вашего обучения на {{ flow_num }} потоке
-обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой был осуществлен возврат на сумму
-{{ amount }} рублей. 
-<br>
-На текущий момент Вы оплатили {{ total_amount }} руб. 
-<br>
-Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут.<br>
-Полная стоимость обучения составляет {{ price }} руб.
-{% endblocktrans %}
-<br>
-<br>
-{% blocktrans trimmed %}
-Для оплаты обучения, проверки статуса оплаты, либо внесения оплаты, вы можете
-перейти по следующей ссылке:
-{% endblocktrans %}
-<br>
-<br>
-<a href="{{ url_pay }}">{% trans "Проверить оплату или оплатить" %}</a>
-<br>
+{{ user_name }}, Вам был осуществлен возврат средств в размере {{ amount }} рублей за оплату обучения на {{ flow_num } потоке в школе неНумерологии Ольги Перцевой {{ flow_name }}.
 
 <br>
 {% blocktrans trimmed %}
-Если у Вас остались вопросы, технические сложности с оплатой или у Вас не получается
-принять участие в этом потоке обучения, свяжитесь с нашим администратором.
-Для связи вы можете использовать мессанджеры WhatsApp, Viber, Telegram.
+Если у Вас остались вопросы или есть сложности, пожалуйста, свяжитесь с нашим администратором в WhatsApp, Viber, Telegram.
 <a href="tel:+79687432507">+79687432507</a>
 {% endblocktrans %}
 
