--- a/emails/templates/emails/notify_pay_mail.html
+++ b/emails/templates/emails/notify_pay_mail.html
@@ -2,18 +2,20 @@
 {% load i18n %}
 
 
+
+
 {% block content %}
 {% blocktrans trimmed with user=user %}
-{{ user_name }}, Вы получили это письмо, так как Вы зачислены на {{ flow_num }} поток
-обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой. На данный момент
-Вы внесли оплату в размере {{ amount }} рублей. Стоимость обучения составляет {{ price}} рублей.
-Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут .
+{{ user_name }}, этим письмом мы подтверждаем, что Вы зачислены на {{ flow_num }} поток
+обучения в школе неНумерологии Ольги Перцевой {{ flow_name }}.
+
+На данный момент Вы оплатили {{ amount }} рублей. Стоимость обучения составляет {{ price}} рублей.
+Напоминаем, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут.
 {% endblocktrans %}
 <br>
 <br>
 {% blocktrans trimmed %}
-Для оплаты обучения, проверки статуса оплаты, либо внесения оплаты, вы можете
-перейти по следующей ссылке:
+Чтобы оплатить обучение или проверить статус оплаты, перейдите по следующей ссылке:
 {% endblocktrans %}
 <br>
 <br>
@@ -22,9 +24,8 @@
 
 <br>
 {% blocktrans trimmed %}
-Если у Вас остались вопросы, технические сложности с оплатой или у Вас не получается
-принять участие в этом потоке обучения, свяжитесь с нашим администратором.
-Для связи вы можете использовать мессанджеры WhatsApp, Viber, Telegram.
+Если у Вас остались вопросы, есть сложности с оплатой или не получается
+принять участие в этом потоке обучения, свяжитесь с нашим администратором в WhatsApp, Viber или Telegram.
 <a href="tel:+79687432507">+79687432507</a>
 {% endblocktrans %}
 
