--- a/emails/templates/emails/notify_payment_accepted_mail.html
+++ b/emails/templates/emails/notify_payment_accepted_mail.html
@@ -1,25 +1,20 @@
+
 {% extends "emails/base.html" %}
 {% load i18n %}
 
 
 {% block content %}
 {% blocktrans trimmed with user=user %}
-{{ user_name }}, для  оплаты Вашего обучения на {{ flow_num }} потоке
-обучения, {{ flow_name }}, в школе неНумерологии Ольги Перцевой поступил платеж на сумму
-{{ amount }} рублей. <br>
+{{ user_name }}, подтверждаем получение платежа в размере {{ amount }} рублей за участие в {{ flow_num }} потоке школы неНумерологии Ольги Перцевой {{ flow_name }}.
+<br>
 {% endblocktrans %}
 {% if price == total_amount %}
-Вы полностью оплатили обучение. Благодарим Вас за полную оплату обучения.
-{% else %}
-На текущий момент Вы оплатили {{ total_amount }} руб.<br> 
-Напоминаем Вам, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут.<br>
-Полная стоимость обучения составляет {{ price }} руб.
+Вы полностью оплатили обучение и мы благодарим Вас!
 {% endif %}
 <br>
 <br>
 {% blocktrans trimmed %}
-Для оплаты обучения, проверки статуса оплаты, либо внесения оплаты, вы можете
-перейти по следующей ссылке:
+Чтобы проверить статус оплаты, перейдите по следующей ссылке:
 {% endblocktrans %}
 <br>
 <br>
@@ -28,10 +23,10 @@
 
 <br>
 {% blocktrans trimmed %}
-Если у Вас остались вопросы, технические сложности с оплатой или у Вас не получается
-принять участие в этом потоке обучения, свяжитесь с нашим администратором.
-Для связи вы можете использовать мессанджеры WhatsApp, Viber, Telegram.
+Если у Вас остались вопросы, есть сложности с оплатой или не получается
+принять участие в этом потоке обучения, свяжитесь с нашим администратором в WhatsApp, Viber или Telegram.
 <a href="tel:+79687432507">+79687432507</a>
 {% endblocktrans %}
 
 {% endblock content %}
+
