added schoolpub links editing from cms; git statusgit statusurgent on production - need to change urls in database

--- a/schoolpub/templates/index1.html
+++ b/schoolpub/templates/index1.html
@@ -95,7 +95,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
       </div>
       <div class="price-ob intro__price">
         <div class="color--accent price-stage">49000 руб.</div>
-        <a href="/schoolp/apply/?flow=16-1-и-2" class="btn intro__btn">Зарегистрироваться</a>
+        <a href="{{ page.link_1_2_stage }}" class="btn intro__btn">Зарегистрироваться</a>
       </div>
     </div>
   </section>
@@ -268,7 +268,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
         </div>
         <div class="price-ob process__price">
           <div class="color--accent price-stage">49000 руб.</div>
-          <a href="/schoolp/apply/?flow=16-1-и-2"" class="btn">Зарегистрироваться</a> 
+          <a href="{{ page.link_1_2_stage}}" class="btn">Зарегистрироваться</a> 
         </div>
         <img src="/static/images/process-author.png" alt="Ольга Перцева" class="process__author">
       </div>
@@ -385,7 +385,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
         </div>
         <div class="price-ob step__price">
           <div class="color--accent price-stage">39000 руб.</div>
-          <a href="/schoolp/apply/?flow=16-ступень-1" class="btn steps__btn">Зарегистрироваться</a>
+          <a href="{{ page.link_1_stage }}" class="btn steps__btn">Зарегистрироваться</a>
         </div>
       </div>
     </section>
@@ -499,7 +499,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
         </div>
         <div class="price-ob step__price">
           <div class="color--accent price-stage">15000 руб.</div>
-          <a href="/schoolp/apply/?flow=15-ступень-2" class="btn steps__btn">Зарегистрироваться</a>
+          <a href="{{ page.link_2_stage}}" class="btn steps__btn">Зарегистрироваться</a>
         </div>
       </div>
     </section>
@@ -597,7 +597,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
     <div class="container section__container">
       <div class="appeal__inner">
         <h2 class="section-title appeal__title">Не хватает только <span class="color--accent">вас!</span></h2>
-        <a href="/schoolp/apply/"" class="btn appeal__btn">Зарегистрироваться</a>
+        <a href="{{ page.link_all }}" class="btn appeal__btn">Зарегистрироваться</a>
       </div>
     </div>
   </section>
@@ -617,6 +617,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
 <script src="/static/js/slick-1.9.0.min.js"></script>
 <!-- main ↓ -->
 <script src="/static/js/main.js?v=5"></script>
+<script src="https://www.youtube.com/iframe_api"></script>
 
 </body>
 </html>
