--- a/emails/templates/emails/notify_payment_all_mail.html
+++ b/emails/templates/emails/notify_payment_all_mail.html
@@ -17,6 +17,7 @@
 принять участие в этом потоке обучения, свяжитесь с нашим администратором в WhatsApp, Viber или Telegram.
 
 <a href="tel:+79856984225">+79856984225</a>
+<a href="https://t.me/annakarpova14">Telegramm</a>
 {% endblocktrans %}
 
 {% endblock content %}
