--- a/emails/templates/emails/notify_pay_mail.html
+++ b/emails/templates/emails/notify_pay_mail.html
@@ -10,7 +10,7 @@
 обучения в школе неНумерологии Ольги Перцевой {{ flow_name }}.
 
 На данный момент Вы оплатили {{ amount }} рублей. Стоимость обучения составляет {{ price}} рублей.
-Напоминаем, что оплата за курс принимается до {{ recr_end }} 00 часов 00 минут.
+Напоминаем, что последний день оплаты  {{ recr_end }}.
 {% endblocktrans %}
 <br>
 <br>
@@ -27,6 +27,7 @@
 Если у Вас остались вопросы, есть сложности с оплатой или не получается
 принять участие в этом потоке обучения, свяжитесь с нашим администратором в WhatsApp, Viber или Telegram.
 <a href="tel:+79856984225">+79856984225</a>
+<a href="https://t.me/annakarpova14">Telegramm</a>
 {% endblocktrans %}
 
 {% endblock content %}
