landing text edited

--- a/schoolpub/templates/index1.html
+++ b/schoolpub/templates/index1.html
@@ -223,6 +223,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
                 <img src="/static/images/process-1.svg" alt="25 видео лекций" class="process-item__icon">
               </div>
               <div class="process-item__text">25 видео лекций</div>
+              <div class="process-item__text">Вам понадобится ПК или ноутбук с ОС Mac OS X или Windows</div>
             </div>
           </div>
           <div class="process__list-col">
@@ -254,7 +255,7 @@ src="https://www.facebook.com/tr?id=1313146512379107&ev=PageView&noscript=1"
               <div class="process-item__picture">
                 <img src="/static/images/process-5.svg" alt="Тесты" class="process-item__icon">
               </div>
-              <div class="process-item__text">Тесты</div>
+              <div class="process-item__text">Тесты для закрепления пройденного материала</div>
             </div>
           </div>
           <div class="process__list-col">
