--- a/schoolpub/templates/blocks/feedbackvideo_item.html
+++ b/schoolpub/templates/blocks/feedbackvideo_item.html
@@ -2,7 +2,7 @@
 <div class="reviews-slider__col">
  <div class="reviews-slider-item">
   <a href="#" class="reviews-slider-item__link">
-   <iframe src="{{ value.url }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen id="video" width="350" height="253"></iframe>
+   <iframe src="{{ value.url }}?controls=0&showinfo=0&loop=1&enablejsapi=1&iv_load_policy=3&rel=0&modestbranding=1&iv_load_policy=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen width="350" height="253"></iframe>
   </a>
  </div>
 </div>
